--- a/webdemo/templates/index.html
+++ b/webdemo/templates/index.html
@@ -11,7 +11,7 @@
     <section>
         <h2>⬆️ Upload File</h2>
         <form id="uploadForm">
-            <input type="file" id="fileInput" name="file" required>
+            <input type="file" id="fileInput" name="file" required multiple>
             <select id="folderDropdown" name="folderDropdown" style="margin-left:10px;"></select>
             <button type="submit">Upload</button>
         </form>
